--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
   <div class="container">
     <main>
       <div class="content">
-        <div class="card-img"><img src="./images/image-equilibrium.jpg" alt=""></div>
+        <div class="content-image">
+            <img src="./images/image-equilibrium.jpg" alt="Avatar" class="image" style="width:100%">
+            
+            <div class="overlay">
+              <div class="text"><img src="./images/icon-view.svg" alt=""></div>
+            </div>
+        </div>
+        
         <div class="card-body">
-          <h1>Equilibrium #3429</h1>
+          <a href="#"><h1>Equilibrium #3429</h1></a> 
           <p>Our Equilibrium collection promotes balance and calm.</p>
         </div>
         <div class="card-eth">
@@ -27,21 +34,11 @@
         </div>
         <div class="profile">
           <div class="profile-img"><img src="./images/image-avatar.png" alt=""></div>
-          <div class="profile-body">Creation of<p>Jules Wyvern</p></div>
+          <div class="profile-body">Creation of<a href="#">Jules Wyvern</a></div>
         </div>
       </div>
     </main>
   </div>
-
-  
-
-  
-
-  
-  
-  
-  
-
 
 </body>
 </html>
