--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <main>
       <div class="content">
         <div class="content-image">
-            <img src="./images/image-equilibrium.jpg" alt="Avatar" class="image" style="width:100%">
-            
-            <div class="overlay">
-              <div class="text"><img src="./images/icon-view.svg" alt=""></div>
-            </div>
+          <div class="image"><img src="./images/image-equilibrium.jpg" alt="">
+          <div class="img-overlay"><img src="./images/icon-view.svg" alt=""></div>
+          </div>
         </div>
         
         <div class="card-body">
